get rid of last _grab SERVER-1602