client/parallel.cpp
@@ -466,11 +466,7 @@ namespace mongo {
         return _ok;
     }
 
-    void Future::commandThread(){
-        assert( _grab );
-        shared_ptr<CommandResult> res = *_grab;
-        _grab = 0;
-        
+    void Future::commandThread(shared_ptr<CommandResult> res){
         ScopedDbConnection conn( res->_server );
         res->_ok = conn->runCommand( res->_db , res->_cmd , res->_res );
         res->_done = true;
@@ -478,20 +474,10 @@ namespace mongo {
     }
 
     shared_ptr<Future::CommandResult> Future::spawnCommand( const string& server , const string& db , const BSONObj& cmd ){
-        shared_ptr<Future::CommandResult> res;
-        res.reset( new Future::CommandResult( server , db , cmd ) );
-        
-        _grab = &res;
-        
-        boost::thread thr( Future::commandThread );
-
-        while ( _grab )
-            sleepmicros(2);
+        shared_ptr<Future::CommandResult> res (new Future::CommandResult( server , db , cmd ));
+        boost::thread thr( boost::bind(Future::commandThread, res) );
 
         return res;
     }
-
-    shared_ptr<Future::CommandResult> * Future::_grab;
-    
     
 }
